filtrado de datos al crear ticket correcto